Examples/07.kubernetes_deployment/test-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-deployment
  namespace: default
  labels:
    k8s-app: test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: test
    spec:
      containers:
        - name: http-test-app
          image: jariepei/test:0.2
          ports:
            - name: http
              containerPort: 7000
