Examples/07.kubernetes_deployment/test-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-service
  namespace: default
spec:
  selector:
    k8s-app: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7000
    nodePort: 32005
  type: NodePort
