Examples/07.kubernetes_deployment/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  rules:
    - host: console.tectonicsandbox.com
      http:
        paths:
          - path: /test-deployment
            backend:
              serviceName: test-service
              servicePort: 80
